<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.forgottenPassword">

    <EditText
        android:id="@+id/forgotten_email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/text_forgottenpassword"
        app:layout_constraintStart_toStartOf="@+id/text_forgottenpassword"
        app:layout_constraintTop_toBottomOf="@+id/text_forgottenpassword"
        android:autofillHints="" />

    <TextView
        android:id="@+id/text_forgottenpassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:text="@string/forgotten_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_send_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/send_email"
        android:textColor="?attr/textColorButton"
        app:layout_constraintEnd_toEndOf="@+id/forgotten_email_address"
        app:layout_constraintStart_toStartOf="@+id/forgotten_email_address"
        app:layout_constraintTop_toBottomOf="@+id/forgotten_email_address" />
</androidx.constraintlayout.widget.ConstraintLayout>